--- a/client/UserInterface.html
+++ b/client/UserInterface.html
@@ -15,9 +15,19 @@
   <div style="float:left">
     <h1>The countries of Europe</h1>
     <div>
-    <label><span>Country:</span><input id="pays" name="pays"></label>
-      <label><span> </span> <button id="bouton">Show</button></label>
+      <label><span>Country:</span>
+        <select name="parfum" id="selectCountry">
+        </select>
+        <button id="boutonShow">Show</button>
+      </label>
+      <label><span>Country 2:</span>
+        <select name="parfum" id="selectCountry2">
+        </select>
+        <button id="boutonDist">Distance</button>
+      </label>
+      <div><span>Distance between Capitals: </span><span class="value" id="affichageDistance"></span></div>
     </div>
+
     <div id="country_data" style="max-width:25vw">
       <h2 id="country_name"></h2>
       <div>
@@ -43,117 +53,5 @@
   </div>
 </body>
 
+<script src="UserInterface.js"></script>
 
-<script>
-
-document.getElementById('bouton').addEventListener('click', clickBouton);
-window.country_data.style.display = 'none';
-// Création d'une carte dans la balise div "map",
-// et position de la vue sur un point donné et un niveau de zoom
-var map = L.map('map').setView([54,13], 4);
-
-// Ajout d'une couche de dalles OpenStreetMap
-L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-     attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-     }).addTo(map);
-
-var greenIcon = L.icon({
-    iconUrl: 'images/marker-icon-green.png'
-});
-var normalIcon = L.icon({
-    iconUrl: 'images/marker-icon.png'
-});
-
-var marker_choisi = null;
-var markers = {};
-
-// Fonction appelée au chargement de la page
-function load_data () {
-
-  // objet pour l'envoi d'une requête Ajax
-  var xhr = new XMLHttpRequest();
-
-  // fonction appelée lorsque la réponse à la requête (liste des lieux insolites) sera arrivée
-  xhr.onload = function() {
-
-    // transformation des données renvoyées par le serveur
-    // responseText est du type string, data est une liste
-    var data = JSON.parse(this.responseText);
-
-    // boucle sur les lieux
-    for ( n = 0; n < data.length; n++ ) {
-      // insertion d'un marqueur à la position du lieu,
-      // attachement d'une popup, capture de l'événement 'clic'
-      // ajout d'une propriété personnalisée au marqueur
-
-      var marker = L.marker([data[n].lat,data[n].lon],{title:data[n].name}).addTo(map);
-      marker.addEventListener('click',clickMarker);
-      marker.name = data[n].name;
-
-      markers[data[n].name] = marker;
-    }
-  };
-
-  // Envoi de la requête Ajax pour la récupération de la liste des lieux insolites
-  xhr.open('GET','/location',true);
-  xhr.send();
-}
-
-// Fonction appelée lors d'un clic sur un marqueur
-function clickMarker (e) {
-  window.pays.value = e.target.name;
-  envoiformulaire(e);
-}
-
-
-function clickBouton(e) {
-    envoiformulaire(e);
-}
-
-function updateMap(name, lat, long) {
-    //changer la couleur des markers, centrer la carte sur la capitale et faire un zoom
-  if(marker_choisi != null){
-      marker_choisi.setIcon(normalIcon)
-  }
-  marker_choisi = markers[name].setIcon(greenIcon);
-  marker_choisi.setIcon(greenIcon);
-  map.setView([lat,long], 6);
-}
-
-
-function envoiformulaire(e) {
-   var xhr = new XMLHttpRequest();
-
-   // on récupère le nom du pays
-   var ps = window.pays.value;
-
-   // requête au serveur
-   xhr.open('GET','/service/country/'+ps,true);
-
-   // fonction callback
-   xhr.onload = function() {
-
-     // récupération des informations au format json
-     if ( this.status == 200 ) {
-       var data = JSON.parse(this.responseText);
-       //window.error_msg.innerHTML = '';
-       window.country_data.style.display = 'block';
-       window.country_name.textContent = data.name;
-       window.continent.textContent = data.continent;
-       window.capital.textContent = data.capital;
-       window.latitude.textContent = data.latitude.toFixed(3);
-       window.longitude.textContent = data.longitude.toFixed(3);
-       window.wp.href = 'https://en.wikipedia.org/wiki/'+data.wp;
-       window.drapeau.src = "flags/"+data.wp+".png";
-
-       updateMap(data.wp, data.latitude.toFixed(3), data.longitude.toFixed(3));
-     }
-     // affichage d'un message d'erreur
-     else {
-        window.country_data.style.display = 'none';
-        window.error_msg.innerHTML = this.statusText;
-     }
-  };
-  xhr.send();
-}
-</script>
