--- a/client/UserInterface.html
+++ b/client/UserInterface.html
@@ -25,10 +25,10 @@
         </select>
         <button id="boutonDist">Distance</button>
       </label>
-      <div><span>Distance between Capitals: </span><span class="value" id="affichageDistance"></span></div>
+      <div style="margin-top:1vh"><span>Distance between Capitals: </span><span class="value" id="affichageDistance"></span></div>
     </div>
 
-    <div id="country_data" style="max-width:25vw">
+    <div id="country_data" style="width:15vw; float:left">
       <h2 id="country_name"></h2>
       <div>
         <img id="drapeau" src="flags/Austria.png" alt="Flag of the country" style="height:10vh; width:10vw">
@@ -38,6 +38,17 @@
       <div><span class="label">Latitude:</span><span class="value" id="latitude"></span></div>
       <div><span class="label">Longitude:</span><span class="value" id="longitude"></span></div>
       <div><span class="label">Read more on:</span><a id="wp" href="">wikipedia</a></div>
+    </div>
+    <div id="country_data2" style="width:15vw; float:right">
+      <h2 id="country_name2"></h2>
+      <div>
+        <img id="drapeau2" src="flags/Austria.png" alt="Flag of the country" style="height:10vh; width:10vw">
+      </div>
+      <div><span class="label">Continent:</span><span class="value" id="continent2"></span></div>
+      <div><span class="label">Capital:</span><span class="value" id="capital2"></span></div>
+      <div><span class="label">Latitude:</span><span class="value" id="latitude2"></span></div>
+      <div><span class="label">Longitude:</span><span class="value" id="longitude2"></span></div>
+      <div><span class="label">Read more on:</span><a id="wp2" href="">wikipedia</a></div>
     </div>
     <div id="error_msg"></div>
   </div>
