--- a/client/UserInterface.html
+++ b/client/UserInterface.html
@@ -38,6 +38,9 @@
       <div><span class="label">Latitude:</span><span class="value" id="latitude"></span></div>
       <div><span class="label">Longitude:</span><span class="value" id="longitude"></span></div>
       <div><span class="label">Read more on:</span><a id="wp" href="">wikipedia</a></div>
+      <audio controls>
+        <source src="https://upload.wikimedia.org/wikipedia/commons/3/30/La_Marseillaise.ogg"/>
+      </audio>
     </div>
     <!-- div pour l'affichage des infos et du drapeau du deuxième pays -->
     <div id="country_data2" style="width:15vw; float:right">
