--- a/client/UserInterface.html
+++ b/client/UserInterface.html
@@ -18,42 +18,74 @@
       <label><span>Country:</span>
         <select name="select1" id="selectCountry">
         </select>
-        <button id="boutonShow">Show</button>
+        <button id="boutonShow" style="width:5vw">Show</button>
       </label>
       <label><span>Country 2:</span>
         <select name="select2" id="selectCountry2">
         </select>
-        <button id="boutonDist">Distance</button>
+        <button id="boutonDist" style="width:5vw">Compare</button>
       </label>
       <div style="margin-top:1vh"><span>Distance between Capitals: </span><span class="value" id="affichageDistance" style="font-weight:bold"></span></div>
     </div>
     <!-- div pour l'affichage des infos et du drapeau du premier pays -->
-    <div id="country_data" style="width:15vw; float:left">
-      <h2 id="country_name"></h2>
-      <div>
-        <img id="drapeau" src="flags/France.png" alt="Flag of the country" style="height:10vh; width:10vw">
+
+    <div id="country_data" style="width:30vw; float:left; display:none">
+      <h2 id="country_name" style="width:14vw; float:left;"></h2>
+      <h2 id="country_name2" style="width:15vw; float:right"></h2>
+      <div style="width:30vw; float:left">
+        <img id="drapeau" src="flags/France.png" alt="Flag of the country" style="height:10vh; width:10vw; float:left">
+        <img id="drapeau2" src="flags/France.png" alt="Flag of the country" style="height:10vh; width:10vw; float:left; margin-left:5vw">
       </div>
-      <div><span class="label">Continent:</span><span class="value" id="continent"></span></div>
-      <div><span class="label">Capital:</span><span class="value" id="capital"></span></div>
-      <div><span class="label">Latitude:</span><span class="value" id="latitude"></span></div>
-      <div><span class="label">Longitude:</span><span class="value" id="longitude"></span></div>
-      <div><span class="label">Read more on:</span><a id="wp" href="">wikipedia</a></div>
-      <audio controls>
-        <source src="https://upload.wikimedia.org/wikipedia/commons/3/30/La_Marseillaise.ogg"/>
-      </audio>
-    </div>
-    <!-- div pour l'affichage des infos et du drapeau du deuxième pays -->
-    <div id="country_data2" style="width:15vw; float:right">
-      <h2 id="country_name2"></h2>
-      <div>
-        <img id="drapeau2" src="flags/France.png" alt="Flag of the country" style="height:10vh; width:10vw">
+      <div style="width:30vw; float:left">
+        <div style="float:left; width:14vw"><span class="label">Continent:</span><span class="value" id="continent"></span></div>
+        <div style="float:left; margin-left:1vw"><span class="value" id="continent2"></span></div>
       </div>
-      <div><span class="label">Continent:</span><span class="value" id="continent2"></span></div>
-      <div><span class="label">Capital:</span><span class="value" id="capital2"></span></div>
-      <div><span class="label">Latitude:</span><span class="value" id="latitude2"></span></div>
-      <div><span class="label">Longitude:</span><span class="value" id="longitude2"></span></div>
-      <div><span class="label">Read more on:</span><a id="wp2" href="">wikipedia</a></div>
+      <div style="width:30vw; float:left">
+        <div style="float:left; width:14vw"><span class="label">Capital:</span><span class="value" id="capital"></span></div>
+        <div style="float:left; margin-left:1vw"><span class="value" id="capital2"></span></div>
+      </div>
+      <div style="width:30vw; float:left">
+        <div style="float:left; width:14vw"><span class="label">Latitude:</span><span class="value" id="latitude"></span></div>
+        <div style="float:left; margin-left:1vw"><span class="value" id="latitude2"></span></div>
+      </div>
+      <div style="width:30vw; float:left">
+        <div style="float:left; width:14vw"><span class="label">Longitude:</span><span class="value" id="longitude"></span></div>
+        <div style="float:left; margin-left:1vw"><span class="value" id="longitude2"></span></div>
+      </div>
+      <div style="width:30vw; float:left">
+        <div style="float:left; width:14vw"><span class="label">Population:</span><span class="value" id="population"></span></div>
+        <div style="float:left; margin-left:1vw"><span class="value" id="population2"></span></div>
+      </div>
+      <div style="width:30vw; float:left">
+        <div style="float:left; width:14vw"><span class="label">Leader title:</span><span class="value" id="leader_title"></span></div>
+        <div style="float:left; margin-left:1vw"><span class="value" id="leader_title2"></span></div>
+      </div>
+      <div style="width:30vw; float:left">
+        <div style="float:left; width:14vw"><span class="label">Leader name:</span><span class="value" id="leader_name"></span></div>
+        <div style="float:left; margin-left:1vw"><span class="value" id="leader_name2"></span></div>
+      </div>
+      <div style="width:30vw; float:left">
+        <div style="float:left; width:14vw"><span class="label">Area:</span><span class="value" id="area"></span></div>
+        <div style="float:left; margin-left:1vw"><span class="value" id="area2"></span></div>
+      </div>
+      <div style="width:30vw; float:left">
+        <div style="float:left; width:14vw"><span class="label">Water percentage:</span><span class="value" id="percent_water"></span></div>
+        <div style="float:left; margin-left:1vw"><span class="value" id="percent_water2"></span></div>
+      </div>
+      <div style="width:30vw; float:left">
+        <div style="float:left; width:14vw"><span class="label">GDP per capita:</span><span class="value" id="GDP_PPP"></span></div>
+        <div style="float:left; margin-left:1vw"><span class="value" id="GDP_PPP2"></span></div>
+      </div>
+      <div style="width:30vw; float:left">
+        <div style="float:left; width:14vw"><span class="label">Currency:</span><span class="value" id="currency"></span></div>
+        <div style="float:left; margin-left:1vw"><span class="value" id="currency2"></span></div>
+      </div>
+      <div style="width:30vw; float:left">
+        <div style="float:left; width:14vw"><span class="label">Read more on:</span><a id="wp" href="" target="_blank">wikipedia</a></div>
+        <div style="float:left; margin-left:1vw"><a id="wp2" href="" target="_blank2">wikipedia</a></div>
+      </div>
     </div>
+
     <div id="error_msg"></div>
   </div>
 
