HTML et JS: Ajouté l'hymne de chaque pays.

--- a/client/UserInterface.html
+++ b/client/UserInterface.html
@@ -84,6 +84,14 @@
         <div style="float:left; width:14vw"><span class="label">Read more on:</span><a id="wp" href="" target="_blank">wikipedia</a></div>
         <div style="float:left; margin-left:1vw"><a id="wp2" href="" target="_blank2">wikipedia</a></div>
       </div>
+      <div style="float:left; width:30vw">
+        <audio id="hymne1" controls>
+          <source id="hymne1_src" src=""/>
+        </audio>
+      </div>
+
+
+
     </div>
 
     <div id="error_msg"></div>
