--- a/client/UserInterface.html
+++ b/client/UserInterface.html
@@ -38,51 +38,51 @@
       </div>
       <div style="width:30vw; float:left">
         <div style="float:left; width:14vw"><span class="label">Continent:</span><span class="value" id="continent"></span></div>
-        <div style="float:left; margin-left:1vw"><span class="value" id="continent2"></span></div>
+        <div style="float:left; margin-left:1vw; width:14vw"><span class="value" id="continent2"></span></div>
       </div>
       <div style="width:30vw; float:left">
         <div style="float:left; width:14vw"><span class="label">Capital:</span><span class="value" id="capital"></span></div>
-        <div style="float:left; margin-left:1vw"><span class="value" id="capital2"></span></div>
+        <div style="float:left; margin-left:1vw; width:14vw"><span class="value" id="capital2"></span></div>
       </div>
       <div style="width:30vw; float:left">
         <div style="float:left; width:14vw"><span class="label">Latitude:</span><span class="value" id="latitude"></span></div>
-        <div style="float:left; margin-left:1vw"><span class="value" id="latitude2"></span></div>
+        <div style="float:left; margin-left:1vw; width:14vw"><span class="value" id="latitude2"></span></div>
       </div>
       <div style="width:30vw; float:left">
         <div style="float:left; width:14vw"><span class="label">Longitude:</span><span class="value" id="longitude"></span></div>
-        <div style="float:left; margin-left:1vw"><span class="value" id="longitude2"></span></div>
+        <div style="float:left; margin-left:1vw; width:14vw"><span class="value" id="longitude2"></span></div>
       </div>
       <div style="width:30vw; float:left">
         <div style="float:left; width:14vw"><span class="label">Population:</span><span class="value" id="population"></span></div>
-        <div style="float:left; margin-left:1vw"><span class="value" id="population2"></span></div>
+        <div style="float:left; margin-left:1vw; width:14vw"><span class="value" id="population2"></span></div>
       </div>
       <div style="width:30vw; float:left">
         <div style="float:left; width:14vw"><span class="label">Leader title:</span><span class="value" id="leader_title"></span></div>
-        <div style="float:left; margin-left:1vw"><span class="value" id="leader_title2"></span></div>
+        <div style="float:left; margin-left:1vw; width:14vw"><span class="value" id="leader_title2"></span></div>
       </div>
       <div style="width:30vw; float:left">
         <div style="float:left; width:14vw"><span class="label">Leader name:</span><span class="value" id="leader_name"></span></div>
-        <div style="float:left; margin-left:1vw"><span class="value" id="leader_name2"></span></div>
+        <div style="float:left; margin-left:1vw; width:14vw"><span class="value" id="leader_name2"></span></div>
       </div>
       <div style="width:30vw; float:left">
         <div style="float:left; width:14vw"><span class="label">Area:</span><span class="value" id="area"></span></div>
-        <div style="float:left; margin-left:1vw"><span class="value" id="area2"></span></div>
+        <div style="float:left; margin-left:1vw; width:14vw"><span class="value" id="area2"></span></div>
       </div>
       <div style="width:30vw; float:left">
         <div style="float:left; width:14vw"><span class="label">Water percentage:</span><span class="value" id="percent_water"></span></div>
-        <div style="float:left; margin-left:1vw"><span class="value" id="percent_water2"></span></div>
+        <div style="float:left; margin-left:1vw; width:14vw"><span class="value" id="percent_water2"></span></div>
       </div>
       <div style="width:30vw; float:left">
         <div style="float:left; width:14vw"><span class="label">GDP per capita:</span><span class="value" id="GDP_PPP"></span></div>
-        <div style="float:left; margin-left:1vw"><span class="value" id="GDP_PPP2"></span></div>
+        <div style="float:left; margin-left:1vw; width:14vw"><span class="value" id="GDP_PPP2"></span></div>
       </div>
       <div style="width:30vw; float:left">
         <div style="float:left; width:14vw"><span class="label">Currency:</span><span class="value" id="currency"></span></div>
-        <div style="float:left; margin-left:1vw"><span class="value" id="currency2"></span></div>
+        <div style="float:left; width:14vw; margin-left:1vw"><span class="value" id="currency2"></span></div>
       </div>
       <div style="width:30vw; float:left">
         <div style="float:left; width:14vw"><span class="label">Read more on:</span><a id="wp" href="" target="_blank">wikipedia</a></div>
-        <div style="float:left; margin-left:1vw"><a id="wp2" href="" target="_blank2">wikipedia</a></div>
+        <div style="float:left; margin-left:1vw; width:14vw"><a id="wp2" href="" target="_blank2">wikipedia</a></div>
       </div>
       <div style="float:left; width:30vw">
         <audio id="hymne1" controls>
