HTML et JS: rajouté l'hymne du deuxième pays

--- a/client/UserInterface.html
+++ b/client/UserInterface.html
@@ -69,11 +69,11 @@
         <div style="float:left; margin-left:1vw; width:14vw"><span class="value" id="area2"></span></div>
       </div>
       <div style="width:30vw; float:left">
-        <div style="float:left; width:14vw"><span class="label">Water percentage:</span><span class="value" id="percent_water"></span></div>
+        <div style="float:left; width:14vw"><span class="label">Water surface:</span><span class="value" id="percent_water"></span></div>
         <div style="float:left; margin-left:1vw; width:14vw"><span class="value" id="percent_water2"></span></div>
       </div>
       <div style="width:30vw; float:left">
-        <div style="float:left; width:14vw"><span class="label">GDP per capita:</span><span class="value" id="GDP_PPP"></span></div>
+        <div style="float:left; width:14vw"><span class="label">GDP/capita:</span><span class="value" id="GDP_PPP"></span></div>
         <div style="float:left; margin-left:1vw; width:14vw"><span class="value" id="GDP_PPP2"></span></div>
       </div>
       <div style="width:30vw; float:left">
@@ -85,8 +85,11 @@
         <div style="float:left; margin-left:1vw; width:14vw"><a id="wp2" href="" target="_blank2">wikipedia</a></div>
       </div>
       <div style="float:left; width:30vw">
-        <audio id="hymne1" controls>
+        <audio id="hymne1" style="width: 13vw; margin-top: 1vh; float:left" controls>
           <source id="hymne1_src" src=""/>
+        </audio>
+        <audio id="hymne2" style="width: 13vw; margin-top: 1vh; float:left; margin-left: 2vw" controls>
+          <source id="hymne2_src" src=""/>
         </audio>
       </div>
 
