HTML + js: minor changes, bug fixes

--- a/client/UserInterface.html
+++ b/client/UserInterface.html
@@ -32,7 +32,7 @@
     <div id="country_data">
       <h2 id="country_name"></h2>
       <h2 id="country_name2"></h2>
-      <div class="infoContainer">
+      <div class="infoContainer" style="margin-bottom:1vh">
         <div class="imageContainerFlag">
           <img id="drapeau" src="flags/France.png" alt="Flag of the country" class="imageFlag">
         </div>
@@ -80,7 +80,7 @@
         <div class="infoRight"><span class="value" id="area2"></span></div>
       </div>
       <div class="infoContainer">
-        <div class="infoLeft"><span class="label">Water:</span><span class="value" id="percent_water"></span></div>
+        <div class="infoLeft"><span class="label">Water surface:</span><span class="value" id="percent_water"></span></div>
         <div class="infoRight"><span class="value" id="percent_water2"></span></div>
       </div>
       <div class="infoContainer">
