HTML + js: minor changes

--- a/client/UserInterface.html
+++ b/client/UserInterface.html
@@ -25,7 +25,7 @@
         </select>
         <button id="boutonDist" style="width:5vw">Compare</button>
       </label>
-      <div style="margin-top:1vh"><span>Distance between Capitals: </span><span class="value" id="affichageDistance" style="font-weight:bold"></span></div>
+      <div style="margin-top:1vh"><span style="font-size:large">Distance between Capitals: </span><span class="value" id="affichageDistance" style="font-size:large; font-weight:bold"></span></div>
     </div>
     <!-- div pour l'affichage des infos et du drapeau du premier pays -->
 
