HTML + js: gdp per capita

--- a/client/UserInterface.html
+++ b/client/UserInterface.html
@@ -83,10 +83,10 @@
         <div class="infoLeft"><span class="label">Water surface:</span><span class="value" id="percent_water"></span></div>
         <div class="infoRight"><span class="value" id="percent_water2"></span></div>
       </div>
-      <!--div class="infoContainer">
-        <div class="infoLeft"><span class="label">GDP/capita:</span><span class="value" id="GDP_PPP"></span></div>
-        <div class="infoRight"><span class="value" id="GDP_PPP2"></span></div>
-      </div-->
+      <div class="infoContainer">
+        <div class="infoLeft"><span class="label">GDP/capita:</span><span class="value" id="gdpppp"></span></div>
+        <div class="infoRight"><span class="value" id="gdpppp2"></span></div>
+      </div>
       <div class="infoContainer">
         <div class="infoLeft"><span class="label">Currency:</span><span class="value" id="currency"></span></div>
         <div class="infoRight"><span class="value" id="currency2"></span></div>
