HTML + js: minor changes ; rajouté le document guide_javascript qui explique le fonctionement de UserInterface.js.

--- a/client/UserInterface.html
+++ b/client/UserInterface.html
@@ -23,7 +23,7 @@
       <label><span>Country 2:</span>
         <select name="select2" id="selectCountry2">
         </select>
-        <button id="boutonDist" style="width:5vw">Compare</button>
+        <button id="boutonComp" style="width:5vw">Compare</button>
       </label>
       <div style="margin-top:1vh"><span style="font-size:large">Distance between Capitals: </span><span class="value" id="affichageDistance" style="font-size:large; font-weight:bold"></span></div>
     </div>
